<resources>
    <string name="app_name">CloudyFoxDemo</string>
    <string name="confirmed_cases">CONFIRMED CASES</string>
    <string name="critical_cases">CRITICAL CASES</string>
    <string name="recovered_cases">RECOVERED CASES</string>

    <string name="confirmed">Confirmed</string>
    <string name="critical">Critical</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="last_change">Last Change</string>
    <string name="last_updated">Last Updated</string>

</resources>