<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dashboardModel"
            type="com.example.cloudyfoxdemo.dashboard.model.DashboardModel" />


        <variable
            name="dashboardNepalModel"
            type="com.example.cloudyfoxdemo.dashboard.model.DashboardNepalModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_margin"
        android:padding="@dimen/main_padding"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView

            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="World Wide Data">

        </TextView>

        <LinearLayout
            android:layout_marginTop="@dimen/main_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">





            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/red"
                android:layout_width="0dp"
                android:layout_height="80dp"

                android:layout_weight="0.5"
                app:cardElevation="@dimen/card_elevation">


                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed_cases">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardModel.confirmedCases}">

                    </TextView>





                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginLeft="@dimen/widget_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/darkOrange"
                android:layout_width="0dp"
                android:layout_height="80dp"

                android:layout_weight="0.5"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/critical_cases">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardModel.criticalCases}">

                    </TextView>





                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardBackgroundColor="@color/green"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/widget_spacing"

            app:cardElevation="@dimen/card_elevation">


            <LinearLayout
                android:gravity="center_vertical"
                android:padding="@dimen/card_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    style="@style/BoldNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_cases">

                </TextView>

                <TextView
                    android:layout_marginTop="@dimen/widget_spacing"
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{``+dashboardModel.recoveredCases}">

                </TextView>





            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="@dimen/widget_spacing"
            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nepal Data"/>


        <LinearLayout
            android:layout_marginTop="@dimen/main_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">





            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/red"
                android:layout_width="0dp"
                android:layout_height="80dp"

                android:layout_weight="0.5"
                app:cardElevation="@dimen/card_elevation">


                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardNepalModel.confirmed}">

                    </TextView>





                </LinearLayout>





            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginLeft="@dimen/widget_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/darkOrange"
                android:layout_width="0dp"
                android:layout_height="80dp"

                android:layout_weight="0.5"
                app:cardElevation="@dimen/card_elevation">


                <LinearLayout

                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/critical">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardNepalModel.critical}">

                    </TextView>





                </LinearLayout>





            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_marginLeft="@dimen/widget_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/brown"
                android:layout_width="0dp"
                android:layout_height="80dp"

                android:layout_weight="0.5"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardNepalModel.deaths}">

                    </TextView>





                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/green"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/widget_spacing"

                app:cardElevation="@dimen/card_elevation">


                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardNepalModel.recovered}">

                    </TextView>





                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginLeft="@dimen/widget_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/teal_700"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/widget_spacing"

                app:cardElevation="@dimen/card_elevation">


                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_change">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardModel.recoveredCases}">

                    </TextView>





                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginLeft="@dimen/widget_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/teal_200"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/widget_spacing"

                app:cardElevation="@dimen/card_elevation">


                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="@dimen/card_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/BoldNormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_updated">

                    </TextView>

                    <TextView
                        android:layout_marginTop="@dimen/widget_spacing"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{``+dashboardModel.recoveredCases}">

                    </TextView>





                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>








    </LinearLayout>
</layout>